--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Jose Reyes</h1>
     <p>Jose_reyes9009</p>
-</body>
+    <a href="https://www.youtube.com/watch?v=rYEDA3JcQqw&list=RDrYEDA3JcQqw&start_radio=1">cancion de adele</a>
+    <a href="https://www.youtube.com/watch?v=e23BTGIJcq8&list=RDe23BTGIJcq8&start_radio=1">cancion de mon laferte</a>
+    <a href="http://youtube.com/watch?v=4O1CNtVG7s8&list=RD4O1CNtVG7s8&start_radio=1">cancion de humbe</a>
+  
 </html>
